implemented base html and css styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <title>Personal Portfolio</title>
   </head>
   <body>
+    <header class="primary-header">
+      <div class="contianer">
+        <a href="#" class="person-name | fw-bold">Soham Purao</a>
+        <nav class="primary-navigation">
+          <ul
+            role="list"
+            aria-label="primary-navigation"
+            class="nav-list | fw-medium"
+          >
+            <li><a href="#">About</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
