written base html and css for this section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul
             role="list"
             aria-label="primary-navigation"
-            class="nav-list | fw-medium"
+            class="nav-list | fw-medium text-capitalize"
           >
             <li><a href="#">About</a></li>
             <li><a href="#">Project</a></li>
@@ -30,6 +30,31 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <section>
+        <div class="container-fluid">
+          <div class="even-columns">
+            <div>
+              <div class="text-primary fw-bold text-uppercase">Web Developer</div>
+              <h1 class="fs-h1 fw-bold title-text ff-heading">Hello, my name is Soham Purao</h1>
+              <div class="fs-regular subtitle-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Perferendis similique commodi alias consectetur optio quia enim
+                dolor dicta vero illo?
+              </div>
+              <div class="hero-social-buttons">
+                <button type="button">Projects</button>
+                <button type="button">Linkedin</button>
+              </div>
+            </div>
+            <div>
+              <img src="images/hero-image.png" height="400" width="470" alt="hero image" class="hero-image">
+            </div>
+          </div>
+        </div>
+      </section>
+  <main>
 
     <script type="module" src="/main.js"></script>
   </body>
