--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
       </section>
       <!-- ================ PROJECT DISPLAY END ================ -->
     </main>
+
+    <!-- ================ FOOTER START ================ -->
+    <footer>
+      <div class="container text-center">
+        <ul
+          role="list"
+          aria-label="footer-social-links"
+          id="footer-social-list"
+        >
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+        </ul>
+        <div class="text-capitalize">© soham purao 2023</div>
+      </div>
+    </footer>
+    <!-- ================ FOOTER END ================ -->
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
